use larger steps

--- a/LSTM + Attention + Preprocessing.ipynb
+++ b/LSTM + Attention + Preprocessing.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
     "background_frequency = 0.1\n",
     "\n",
     "################### Wav Shifting #########################\n",
-    "time_shift = int(desired_samples/8)\n",
+    "time_shift = int(desired_samples/4)\n",
     "\n",
     "############### MFCC Processing Params ###################\n",
     "# Duration of frequency analysis window.\n",
@@ -160,9 +160,9 @@
     "MODEL_TYPE = \"bi-lstm\"\n",
     "ATTENTION = True\n",
     "LEARN_RATE = 0.00001\n",
-    "BATCH_SIZE = batch_size = 32\n",
+    "BATCH_SIZE = batch_size = 140\n",
     "INPUT_SHAPE = [max_len, embed_dim]\n",
-    "EPOCHE = 4\n",
+    "EPOCHE = 6\n",
     "NUM_HIDDEN = 100\n",
     "TIME_STEPS = max_len\n",
     "SINGLE_ATTENTION_VECTOR = False"
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
        "'training'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 61,
    "metadata": {
     "collapsed": true
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -715,23 +715,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.0086354 ,  0.02160546,  0.00298094, ..., -0.01250341,\n",
-       "       -0.00757132,  0.02493377], dtype=float32)"
+       "array([-0.00027321, -0.00068277, -0.00100905, ..., -0.00067322,\n",
+       "       -0.00061243, -0.00142888], dtype=float32)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mix_background_noise(wav_data, 0.1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Change volume"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def change_volume(wav, min_v=0.7, max_v=1.3):\n",
+    "    ratio = np.random.uniform(min_v, max_v)\n",
+    "    return np.multiply(wav, ratio)"
    ]
   },
   {
@@ -750,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
@@ -769,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -793,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +822,7 @@
        "(99, 26)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -833,7 +853,8 @@
     "    if mode=='train':\n",
     "        wav = silence_as_zero(wav, label)\n",
     "        wav = shift_and_pad_zeros(wav)\n",
-    "    wav = mix_background_noise(wav)\n",
+    "        wav = change_volume(wav)\n",
+    "        wav = mix_background_noise(wav)\n",
     "    return mfcc(wav,numcep=dct_coefficient_count), word_to_index[label]"
    ]
   },
@@ -846,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -879,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -912,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -945,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -966,17 +987,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 81,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.preprocessing.sequence import pad_sequences\n",
     "from keras.models import Sequential\n",
@@ -990,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1039,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1049,24 +1062,24 @@
       "__________________________________________________________________________________________________\n",
       "Layer (type)                    Output Shape         Param #     Connected to                     \n",
       "==================================================================================================\n",
-      "input_1 (InputLayer)            (None, 99, 26)       0                                            \n",
+      "input_2 (InputLayer)            (None, 99, 26)       0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "bidirectional_1 (Bidirectional) (None, 99, 200)      101600      input_1[0][0]                    \n",
+      "bidirectional_2 (Bidirectional) (None, 99, 200)      101600      input_2[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "permute_1 (Permute)             (None, 200, 99)      0           bidirectional_1[0][0]            \n",
+      "permute_2 (Permute)             (None, 200, 99)      0           bidirectional_2[0][0]            \n",
       "__________________________________________________________________________________________________\n",
-      "reshape_1 (Reshape)             (None, 200, 99)      0           permute_1[0][0]                  \n",
+      "reshape_2 (Reshape)             (None, 200, 99)      0           permute_2[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                 (None, 200, 99)      9900        reshape_1[0][0]                  \n",
+      "dense_3 (Dense)                 (None, 200, 99)      9900        reshape_2[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
-      "attention_vec (Permute)         (None, 99, 200)      0           dense_1[0][0]                    \n",
+      "attention_vec (Permute)         (None, 99, 200)      0           dense_3[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
-      "attention_mul (Merge)           (None, 99, 200)      0           bidirectional_1[0][0]            \n",
+      "attention_mul (Merge)           (None, 99, 200)      0           bidirectional_2[0][0]            \n",
       "                                                                 attention_vec[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "flatten_1 (Flatten)             (None, 19800)        0           attention_mul[0][0]              \n",
+      "flatten_2 (Flatten)             (None, 19800)        0           attention_mul[0][0]              \n",
       "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 12)           237612      flatten_1[0][0]                  \n",
+      "dense_4 (Dense)                 (None, 12)           237612      flatten_2[0][0]                  \n",
       "==================================================================================================\n",
       "Total params: 349,112\n",
       "Trainable params: 349,112\n",
@@ -1085,21 +1098,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/4\n",
-      "888/888 [==============================] - 349s - loss: 0.9658 - acc: 0.6994   \n",
-      "Epoch 2/4\n",
-      "888/888 [==============================] - 284s - loss: 0.4610 - acc: 0.8586   \n",
-      "Epoch 3/4\n",
-      "888/888 [==============================] - 284s - loss: 0.3550 - acc: 0.8910   \n",
-      "Epoch 4/4\n",
-      "888/888 [==============================] - 285s - loss: 0.3002 - acc: 0.9078   \n"
+      "Epoch 1/6\n",
+      "203/203 [==============================] - 259s - loss: 1.4119 - acc: 0.5729   \n",
+      "Epoch 2/6\n",
+      "203/203 [==============================] - 262s - loss: 0.6583 - acc: 0.7985   \n",
+      "Epoch 3/6\n",
+      "203/203 [==============================] - 335s - loss: 0.4852 - acc: 0.8535   \n",
+      "Epoch 4/6\n",
+      "203/203 [==============================] - 324s - loss: 0.3964 - acc: 0.8818   \n",
+      "Epoch 5/6\n",
+      "203/203 [==============================] - 326s - loss: 0.3417 - acc: 0.8976   \n",
+      "Epoch 6/6\n",
+      "203/203 [==============================] - 327s - loss: 0.3075 - acc: 0.9082   \n"
      ]
     },
     {
@@ -1108,7 +1125,7 @@
        "'\\nmodel.fit_generator(generator = train_generator(), \\n                    steps_per_epoch = len(train_data_index)//batch_size,\\n                    validation_data = val_generator(),\\n                    validation_steps = len(val_data_index)//batch_size,\\n                    epochs=EPOCHE)\\n'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1140,50 +1157,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 0/3081\n",
-      "Step 100/3081\n",
-      "Step 200/3081\n",
-      "Step 300/3081\n",
-      "Step 400/3081\n",
-      "Step 500/3081\n",
-      "Step 600/3081\n",
-      "Step 700/3081\n",
-      "Step 800/3081\n",
-      "Step 900/3081\n",
-      "Step 1000/3081\n",
-      "Step 1100/3081\n",
-      "Step 1200/3081\n",
-      "Step 1300/3081\n",
-      "Step 1400/3081\n",
-      "Step 1500/3081\n",
-      "Step 1600/3081\n",
-      "Step 1700/3081\n",
-      "Step 1800/3081\n",
-      "Step 1900/3081\n",
-      "Step 2000/3081\n",
-      "Step 2100/3081\n",
-      "Step 2200/3081\n",
-      "Step 2300/3081\n",
-      "Step 2400/3081\n",
-      "Step 2500/3081\n",
-      "Step 2600/3081\n",
-      "Step 2700/3081\n",
-      "Step 2800/3081\n",
-      "Step 2900/3081\n",
-      "Step 3000/3081\n",
-      "Correct Prediction: 2452/3081\n"
+      "Step 0/3093\n",
+      "Step 100/3093\n",
+      "Step 200/3093\n",
+      "Step 300/3093\n",
+      "Step 400/3093\n",
+      "Step 500/3093\n",
+      "Step 600/3093\n",
+      "Step 700/3093\n",
+      "Step 800/3093\n",
+      "Step 900/3093\n",
+      "Step 1000/3093\n",
+      "Step 1100/3093\n",
+      "Step 1200/3093\n",
+      "Step 1300/3093\n",
+      "Step 1400/3093\n",
+      "Step 1500/3093\n",
+      "Step 1600/3093\n",
+      "Step 1700/3093\n",
+      "Step 1800/3093\n",
+      "Step 1900/3093\n",
+      "Step 2000/3093\n",
+      "Step 2100/3093\n",
+      "Step 2200/3093\n",
+      "Step 2300/3093\n",
+      "Step 2400/3093\n",
+      "Step 2500/3093\n",
+      "Step 2600/3093\n",
+      "Step 2700/3093\n",
+      "Step 2800/3093\n",
+      "Step 2900/3093\n",
+      "Step 3000/3093\n",
+      "Correct Prediction: 2476/3093\n"
      ]
     }
    ],
    "source": [
-    "test_data_index = data_index['testing']\n",
+    "test_data_index = data_index['validation']\n",
     "correct_count = 0\n",
     "\n",
     "for i in range(len(test_data_index)):\n",
@@ -1209,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 87,
    "metadata": {
     "collapsed": true
    },
@@ -1224,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1250,7 @@
        "'/Users/yufan/Documents/workspace/kaggle-project/dataset/test/audio/clip_667ea2de0.wav'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1244,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -1326,6 +1343,28 @@
     "\n",
     "print(\"Writing to file.....\")\n",
     "submissionDF.to_csv(\"submission-bi-lstm-attention-prepropcessing-1.csv\", index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_test = len(test_files)\n",
+    "\n",
+    "test_mfcc_batch = []\n",
+    "\n",
+    "with open(\"submission.csv\", \"w\") as file:\n",
+    "    file.write('fname,label\\n')\n",
+    "    for i in range(num_test):\n",
+    "        wav_mfcc, _ = preprocess(test_files[i], 'yes', mode='train')\n",
+    "        label = possible_labels[np.argmax( model.predict(wav_mfcc[np.newaxis,:,:]) )]\n",
+    "        file.write(test_filenames[i]+','+label+'\\n')\n",
+    "        if i % 3000 == 0:\n",
+    "            print(\"Predicting {}/{}\".format(i, num_test))\n",
+    "            \n",
+    "print(\"Done....\")"
    ]
   },
   {
